src/css/index.css
@font-face {
    font-family: 'Comic Sans MS Fallback';
    src: url('../../public/fonts/ComicSansMS.eot');
    src: url('../../public/fonts/ComicSansMS.eot?#iefix') format('embedded-opentype'),
        url('../../public/fonts/ComicSansMS.woff2') format('woff2'),
        url('../../public/fonts/ComicSansMS.woff') format('woff'),
        url('../../public/fonts/ComicSansMS.ttf') format('truetype'),
        url('../../public/fonts/ComicSansMS.svg#ComicSansMS') format('svg');
    font-weight: normal;
    font-style: normal;
    font-display: swap;
}

* {
    margin: 0;
    padding: 0;
}

html {
    font-size: 16px;

    --size-xxxl: 4rem;
    --size-xxl: 3rem;
    --size-xl: 2rem;
    --size-l: 1.8rem;
    --size-m: 1.5rem;
    --size-s: 1rem;
    --size-xs: 0.8rem;
    --size-xxs: 0.5rem;
}

li {
    list-style: none;
}

.clearfix:before,
.clearfix::after {
    content: "";
    display: table;
}

.clearfix::after {
    clear: both;
}

.clearfix {
    zoom: 1;
}

a {
    text-decoration: none;
}

input {
    border: none;
    text-align: center;
    background-color: transparent;
}

button {
    border: none;
    cursor: pointer;
    color: black;
}

.flex-center {
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
}

body {
    background-image: linear-gradient(315deg, #fdcbf1 0%, #fdcbf1 1%, #e6dee9 100%);
    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', sans-serif;
}

body.en * {
    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', sans-serif;
}

body.ru * {
    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', sans-serif;
}

body.zh * {
    font-family: 'Comic Sans MS', 'Comic Sans MS Fallback', 'STHupo', sans-serif;
}

#app {
    padding-bottom: 16px;
}

#app.ios {
    padding-top: var(--status-bar-height);
    padding-bottom: var(--safe-area-inset-bottom);
}

.Main {
    width: 95%;
    margin: 0 auto;
    text-align: center;
}

.Main .Section {
    padding: var(--size-s) var(--size-xs);
}

.Main .Section h2 {
    margin: 4px 0 8px 0;
    font-size: var(--size-l);
}

.Main .Section h3 {
    margin: 4px 0 8px 0;
    font-size: var(--size-m);
}

.Main .Section h4 {
    font-size: calc(var(--size-m) * 0.8);
}

hr.divider {
    width: 90%;
    margin: 0 auto;
    height: 2px;
    border: none;
    background-image: linear-gradient(90deg, transparent 0%, #3f3f3f 50%, transparent 100%);
}

.shadow-light {
    box-shadow: 0 0 8px rgba(0, 0, 0, 0.3);
    transition: 0.5s;
}

.shadow-light:hover {
    box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
    transform: scale(1.05);
}

.expandable {
    overflow-y: hidden;
    max-height: 0;
    transition: 1s ease-in-out;
}

.expandable.expand {
    max-height: 500px;
}

